--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        maven { url 'http://localhost:8081/repository/study_release/' }
     }
 }
 
