--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.3.72"
+    ext.username = "60b99877395ee4198dade13d"
+    ext.password = "G2iSW9O0uPQR"
     repositories {
         google()
         jcenter()
@@ -19,7 +21,22 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
-        maven { url 'http://localhost:8081/repository/study_release/' }
+//        maven { url 'http://localhost:8081/repository/study_release/' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven {
+            credentials {
+                username "60b99877395ee4198dade13d"
+                password "G2iSW9O0uPQR"
+            }
+            url 'https://packages.aliyun.com/maven/repository/2109100-release-4siMok/'
+        }
+        maven {
+            credentials {
+                username "60b99877395ee4198dade13d"
+                password "G2iSW9O0uPQR"
+            }
+            url 'https://packages.aliyun.com/maven/repository/2109100-snapshot-bgORc0/'
+        }
     }
 }
 
