--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@ buildscript {
     ext.kotlin_version = "1.3.72"
     ext.username = "60b99877395ee4198dade13d"
     ext.password = "G2iSW9O0uPQR"
+    ext.release_url = "https://packages.aliyun.com/maven/repository/2109100-release-4siMok/"
+    ext.snapshot_url = "https://packages.aliyun.com/maven/repository/2109100-snapshot-bgORc0/"
+    ext.group = "com.example.study"
+
     repositories {
         google()
         jcenter()
