--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,16 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-//    id 'com.tencent.matrix-plugin'
 }
-
-//matrix {
-//    trace {
-//        enable = true	//if you don't want to use trace canary, set false
-//        baseMethodMapFile = "${project.buildDir}/matrix_output/Debug.methodmap"
-//        blackListFile = "${project.projectDir}/matrixTrace/blackMethodList.txt"
-//    }
-//}
 
 android {
     compileSdkVersion 29
@@ -47,7 +38,6 @@ android {
 }
 
 dependencies {
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -78,27 +68,16 @@ dependencies {
 
     implementation "com.tencent.tinker:tinker-android-lib:1.9.1"
 
-
-//    implementation group: "com.tencent.matrix", name: "matrix-android-lib", version: MATRIX_VERSION, changing: true
-//    implementation group: "com.tencent.matrix", name: "matrix-android-commons", version: MATRIX_VERSION, changing: true
-//    implementation group: "com.tencent.matrix", name: "matrix-trace-canary", version: MATRIX_VERSION, changing: true
-//    implementation group: "com.tencent.matrix", name: "matrix-resource-canary-android", version: MATRIX_VERSION, changing: true
-//    implementation group: "com.tencent.matrix", name: "matrix-resource-canary-common", version: MATRIX_VERSION, changing: true
-//    implementation group: "com.tencent.matrix", name: "matrix-io-canary", version: MATRIX_VERSION, changing: true
-//    implementation group: "com.tencent.matrix", name: "matrix-sqlite-lint-android-sdk", version: MATRIX_VERSION, changing: true
-//    implementation group: "com.tencent.matrix", name: "matrix-battery-canary", version: MATRIX_VERSION, changing: true
-
-
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
 
-    implementation project(path: ':common')
 
 //    runtimeOnly project(path: ':user')
 //    runtimeOnly project(path: ':shop')
 //    runtimeOnly project(path: ':home')
 
-    // 本地Nexus
-    runtimeOnly "com.example.study:user:1.0.1-SNAPSHOT"
-    runtimeOnly "com.example.study:home:1.0.1-SNAPSHOT"
-    runtimeOnly "com.example.study:shop:1.0.1-SNAPSHOT"
+//    implementation project(path: ':common')
+    implementation "com.example.study:common:1.0.1-SNAPSHOT"
+    runtimeOnly "com.example.study:home:1.0.3-SNAPSHOT"
+    runtimeOnly "com.example.study:shop:1.0.3-SNAPSHOT"
+    runtimeOnly "com.example.study:user:1.0.3-SNAPSHOT"
 }
