--- a/common/build.gradle
+++ b/common/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
 }
+apply from: '../module_publish.gradle'
 
 android {
     compileSdkVersion 30
@@ -38,9 +39,11 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
-    api project(path: ':service')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
     api "com.alibaba:arouter-api:1.5.1"
+    api "com.example.study:service:1.0.1-SNAPSHOT"
+    //    api project(path: ':service')
 }
