--- a/home/build.gradle
+++ b/home/build.gradle
@@ -2,30 +2,9 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'maven'
 }
-def VERSION_NAME = '1.0.1-SNAPSHOT'
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository(url: rootProject.ext.release_url) {
-                authentication(
-                        userName: rootProject.ext.username,
-                        password: rootProject.ext.password
-                )
-            }
-            snapshotRepository(url: rootProject.ext.snapshot_url) {
-                authentication(
-                        userName: rootProject.ext.username,
-                        password: rootProject.ext.password
-                )
-            }
-            pom.version = VERSION_NAME
-            pom.artifactId = project.getName()
-            pom.groupId = rootProject.ext.group
-        }
-    }
-}
+apply from: '../module_publish.gradle'
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.1"
@@ -64,13 +43,14 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    testImplementation 'junit:junit:4.+'
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation project(path: ':common')
-    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     kapt 'com.alibaba:arouter-compiler:1.2.2'
+//    implementation project(path: ':common')
+    implementation "com.example.study:common:1.0.1-SNAPSHOT"
 }
