--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
+apply from: '../module_publish.gradle'
 
 android {
     compileSdkVersion 30
