--- a/user/build.gradle
+++ b/user/build.gradle
@@ -2,32 +2,8 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'maven'
-    id 'maven-publish'
 }
-
-def VERSION_NAME = '1.0.1-SNAPSHOT'
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository(url: rootProject.ext.release_url) {
-                authentication(
-                        userName: rootProject.ext.username,
-                        password: rootProject.ext.password
-                )
-            }
-            snapshotRepository(url: rootProject.ext.snapshot_url) {
-                authentication(
-                        userName: rootProject.ext.username,
-                        password: rootProject.ext.password
-                )
-            }
-            pom.version = VERSION_NAME
-            pom.artifactId = project.getName()
-            pom.groupId = rootProject.ext.group
-        }
-    }
-}
+apply from: '../module_publish.gradle'
 
 android {
     compileSdkVersion 30
@@ -74,7 +50,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation project(path: ':common')
+//    implementation project(path: ':common')
+    implementation "com.example.study:common:1.0.1-SNAPSHOT"
 
     kapt 'com.alibaba:arouter-compiler:1.2.2'
 }
