--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,12 @@ buildscript {
     ext.snapshot_url = "https://packages.aliyun.com/maven/repository/2109100-snapshot-bgORc0/"
     ext.group = "com.example.study"
 
+    ext.plugin_version="0.2.8"
+
     repositories {
         google()
         jcenter()
+        maven {url "https://artifact.bytedance.com/repository/byteX/"}
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
@@ -17,6 +20,9 @@ buildscript {
 //        classpath ("com.tencent.matrix:matrix-gradle-plugin:${MATRIX_VERSION}") { changing = true }
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath "com.bytedance.android.byteX:base-plugin:${plugin_version}"
+        // Add bytex plugins' dependencies on demand. 按需添加插件依赖
+        classpath "com.bytedance.android.byteX:refer-check-plugin:${plugin_version}"
     }
 }
 
