--- a/home/build.gradle
+++ b/home/build.gradle
@@ -51,6 +51,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     kapt 'com.alibaba:arouter-compiler:1.2.2'
-//    implementation project(path: ':common')
-    implementation "com.example.study:common:1.0.1-SNAPSHOT"
+    implementation project(path: ':common')
+//    implementation "com.example.study:common:1.0.1-SNAPSHOT"
 }
