--- a/shop/build.gradle
+++ b/shop/build.gradle
@@ -50,8 +50,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-//    implementation project(path: ':common')
-    implementation "com.example.study:common:1.0.1-SNAPSHOT"
+    implementation project(path: ':common')
+//    implementation "com.example.study:common:1.0.1-SNAPSHOT"
 
 
     kapt 'com.alibaba:arouter-compiler:1.2.2'
