--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.example.study:custom-plugin:1.0.0'
+        classpath 'com.example.study:auto-register-plugin:1.0.0'
     }
 }
 
