--- a/service/build.gradle
+++ b/service/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
 }
-apply from: '../module_publish.gradle'
+// apply from: '../module_publish.gradle'
 
 android {
     compileSdkVersion 30
