--- a/user/build.gradle
+++ b/user/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'kotlin-kapt'
 }
 
-apply from: '../module_publish.gradle'
+// apply from: '../module_publish.gradle'
 
 android {
     compileSdkVersion 30
