--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "http://maven.wireless.release.ctripcorp.com/nexus/repository/public" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:4.1.0"
+        classpath "ctrip.wireless.android:insert-plugin:0.4.99.5"
+        classpath "ctrip.wireless.android:auto-patch-plugin:0.4.99.10"
 //        classpath ("com.tencent.matrix:matrix-gradle-plugin:${MATRIX_VERSION}") { changing = true }
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -43,6 +46,8 @@ allprojects {
             }
             url 'https://packages.aliyun.com/maven/repository/2109100-snapshot-bgORc0/'
         }
+
+        maven { url "http://maven.wireless.release.ctripcorp.com/nexus/repository/public" }
     }
 }
 
