debug包加载补丁成功

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 plugins {
     id 'com.android.application'
     //制作补丁时将这个打开，auto-patch-plugin紧跟着com.android.application
-    id 'auto-patch-plugin'
+//    id 'auto-patch-plugin'
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'robust'
@@ -75,13 +75,13 @@ android {
         abortOnError false
     }
 
-    //打patch的时候才需要，如果没有依赖patch插件，不要添加该内容
-    hotfixConfig{
-        //patch的包名，不要和bundle的包名一致，可以在后面追加一个.patch
-        patchPackName 'ctrip.wireless.android.patch'
-        //patch内容的输入目录 路径的后面需要加上分隔符
-        hotfixDir 'hotfix_build/outputs/hotfix/'
-    }
+//    //打patch的时候才需要，如果没有依赖patch插件，不要添加该内容
+//    hotfixConfig{
+//        //patch的包名，不要和bundle的包名一致，可以在后面追加一个.patch
+//        patchPackName 'ctrip.wireless.android.patch'
+//        //patch内容的输入目录 路径的后面需要加上分隔符
+//        hotfixDir 'hotfix_build/outputs/hotfix/'
+//    }
 }
 
 dependencies {
