--- a/common/build.gradle
+++ b/common/build.gradle
@@ -68,4 +68,5 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07'
     // When using a AppCompat theme
     implementation "com.google.accompanist:accompanist-appcompat-theme:0.16.0"
+    api 'io.github.meituan-dianping:router:1.2.1'
 }
