--- a/auto-register-plugin/build.gradle
+++ b/auto-register-plugin/build.gradle
@@ -9,19 +9,28 @@ java {
     targetCompatibility = JavaVersion.VERSION_1_8
 }
 
-
 apply plugin: 'maven-publish'
 
-group='com.example.study'
-version='1.0.0'
+publishing {
+    publications {
+        // 这里的 hello 可以任意命名
+        autoRegister(MavenPublication) {
+            // 插件的组ID，建议设置为插件的包名
+            groupId = 'com.example.study'
+            // 翻译过来是 工件ID，我的理解是插件的名字
+            artifactId = 'auto-register-plugin'
+            version = '1.0.1'
+            // 组件类型，我们的插件其实就是Java组件
+            from components.java
+        }
+    }
 
-//uploadArchives {
-//    repositories {
-//        mavenDeployer {
-//            repository(url: uri('../gradle_plugins'))
-//        }
-//    }
-//}
+    repositories {
+        maven {
+            url = "$rootDir/gradle_plugins"
+        }
+    }
+}
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
