--- a/common/build.gradle
+++ b/common/build.gradle
@@ -69,4 +69,6 @@ dependencies {
     // When using a AppCompat theme
     implementation "com.google.accompanist:accompanist-appcompat-theme:0.16.0"
     api 'io.github.meituan-dianping:router:1.2.1'
+
+    api project(":interfaces")
 }
