--- a/user/build.gradle
+++ b/user/build.gradle
@@ -22,6 +22,7 @@ android {
         kapt {
             arguments {
                 arg("AROUTER_MODULE_NAME", project.getName())
+                arg("MODULE_NAME", project.getName())
             }
         }
     }
@@ -55,4 +56,6 @@ dependencies {
 //    implementation "com.example.study:common:1.0.1-SNAPSHOT"
 
     kapt 'com.alibaba:arouter-compiler:1.2.2'
+
+    kapt project(':compiler')
 }
