AOP+ASM实现组件生命周期初始化

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.example.study:auto-register-plugin:1.0.1'
+        classpath 'com.example.study:auto-register-plugin:1.0.2'
     }
 }
 
@@ -16,7 +16,7 @@ plugins {
     id 'kotlin-kapt'
 }
 
-//apply plugin: 'study.plugin'
+apply plugin: 'study.plugin'
 apply plugin: 'WMRouter'
 
 android {
