--- a/home/build.gradle
+++ b/home/build.gradle
@@ -21,7 +21,7 @@ android {
         kapt {
             arguments {
                 arg("AROUTER_MODULE_NAME", project.getName())
-                arg("MODULE_NAME", project.getName())
+
             }
         }
     }
@@ -54,4 +54,6 @@ dependencies {
     kapt 'com.alibaba:arouter-compiler:1.2.2'
     implementation project(path: ':common')
 //    implementation "com.example.study:common:1.0.1-SNAPSHOT"
+
+    kapt project(':compiler')
 }
