--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,12 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 MATRIX_VERSION=0.9.0
+
+#build config
+compileSdkVersion=30
+buildToolsVersion=30.0.1
+
+minSdkVersion=21
+targetSdkVersion=30
+versionCode=1
+versionName=1.0
