--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,74 +1,10 @@
-plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
-}
-// apply from: '../module_publish.gradle'
-
-android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.1"
-
-    defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
-    buildFeatures {
-        compose true
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.0.1'
-    }
-}
+apply from: '../config/module_build_config.gradle'
+apply from: '../config/dependencies.gradle'
 
 dependencies {
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
     api "com.alibaba:arouter-api:1.5.1"
-//    api "com.example.study:service:1.0.1-SNAPSHOT"
     api project(path: ':service')
     api project(path: ':launcher')
-
-    // Integration with activities
-    implementation 'androidx.activity:activity-compose:1.3.1'
-    // Compose Material Design
-    implementation 'androidx.compose.material:material:1.0.1'
-    // Animations
-    implementation 'androidx.compose.animation:animation:1.0.1'
-    // Tooling support (Previews, etc.)
-    implementation 'androidx.compose.ui:ui-tooling:1.0.1'
-    // Integration with ViewModels
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07'
-    // When using a AppCompat theme
-    implementation "com.google.accompanist:accompanist-appcompat-theme:0.16.0"
     api 'io.github.meituan-dianping:router:1.2.1'
-
     api project(":interfaces")
 }
