整理compiler、interface模块依赖关系

--- a/auto-register-plugin/build.gradle
+++ b/auto-register-plugin/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'org.ow2.asm:asm-commons:9.1'
 
     compileOnly project(":interfaces")
+    compileOnly project(":moduleLike")
 
 }
 
