--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     compileOnly 'com.google.auto.service:auto-service:1.0-rc7'
     // 帮助我们通过类调用的方式来生成Java代码[JavaPoet]
     implementation 'com.squareup:javapoet:1.13.0'
-
     // 依赖于注解
     implementation project(':interfaces')
+    implementation project(':moduleLike')
 }
