--- a/settings.gradle
+++ b/settings.gradle
@@ -1,15 +1,4 @@
-include ':launcher'
-include ':module-plugin'
-include ':service'
-include ':common'
-include ':shop'
-include ':home'
-include ':user'
-include ':app'
-rootProject.name = "Study"
-include ':interfaces'
-include ':compiler'
-include ':moduleLike',':base-plugin'
+include ':app',':launcher',':module-plugin',':service',':common',':shop',':user',':interfaces',':compiler',':moduleLike',':base-plugin',':home'
 project(':home').projectDir = new File('Business/home')
 project(':service').projectDir = new File('Business/service')
 project(':shop').projectDir = new File('Business/shop')
@@ -20,3 +9,6 @@ project(':base-plugin').projectDir = new File('Plugin/base-plugin')
 project(':interfaces').projectDir = new File('Lib/interfaces')
 project(':launcher').projectDir = new File('Lib/launcher')
 project(':moduleLike').projectDir = new File('Lib/moduleLike')
+
+rootProject.name = "卷王"
+
