--- a/Plugin/compiler/build.gradle
+++ b/Plugin/compiler/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java-library'
+    id 'kotlin-kapt'
     id 'org.jetbrains.kotlin.jvm'
 }
 
@@ -15,11 +16,11 @@ tasks.withType(JavaCompile){
 
 dependencies {
     // 编译时期进行注解处理
-    annotationProcessor 'com.google.auto.service:auto-service:1.0-rc7'
-    compileOnly 'com.google.auto.service:auto-service:1.0-rc7'
+    kapt 'com.google.auto.service:auto-service:1.0-rc7'
+    //noinspection AnnotationProcessorOnCompilePath
+    implementation 'com.google.auto.service:auto-service:1.0-rc7'
     // 帮助我们通过类调用的方式来生成Java代码[JavaPoet]
     implementation 'com.squareup:javapoet:1.13.0'
-    // 依赖于注解
     implementation project(':interfaces')
     implementation project(':moduleLike')
 }
