--- a/Plugin/compiler/build.gradle
+++ b/Plugin/compiler/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     //noinspection AnnotationProcessorOnCompilePath
     implementation 'com.google.auto.service:auto-service:1.0-rc7'
     // 帮助我们通过类调用的方式来生成Java代码[JavaPoet]
-    implementation 'com.squareup:javapoet:1.13.0'
+    implementation 'com.squareup:kotlinpoet:1.10.2'
     implementation project(':interfaces')
     implementation project(':moduleLike')
 }
