--- a/Plugin/module-plugin/build.gradle
+++ b/Plugin/module-plugin/build.gradle
@@ -33,7 +33,7 @@ publishing {
 }
 
 dependencies {
-//    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.21"
 //    implementation gradleApi()//gradle sdk
 //    compileOnly 'com.android.tools.build:gradle:4.1.3'
 //    compileOnly 'com.android.tools.build:gradle-api:4.1.3'
