--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,9 @@
             android:theme="@style/Theme.Study.NoActionBar"
             android:name=".ui.PayActivity"
             android:label="安全支付" />
+        <activity
+            android:name=".ui.TestFpsActivity"
+            android:label="FPS" />
         <activity android:name=".ui.base.UriProxyActivity" android:exported="true">
             <intent-filter>
                 <!-- 接收所有scheme为study的外部URI跳转，不区分host和path -->
