--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             tools:node="remove"/>
 
         <activity
+            android:theme="@style/Theme.Launch"
             android:exported="true"
             android:name=".MainActivity"
             android:label="@string/app_name">
