--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:name=".MyApp"
         android:allowBackup="true"
@@ -25,13 +26,13 @@
             android:name="androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.androidx-startup"
             android:exported="false"
-            tools:node="remove"/>
+            tools:node="remove" />
 
         <activity
-            android:theme="@style/Theme.Launch"
-            android:exported="true"
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Launch">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -56,20 +57,26 @@
             android:name=".ui.ComposeActivity"
             android:label="Compose" />
         <activity
-            android:theme="@style/Theme.Study.NoActionBar"
             android:name=".ui.PayActivity"
-            android:label="安全支付" />
+            android:label="安全支付"
+            android:theme="@style/Theme.Study.NoActionBar" />
         <activity
-            android:theme="@style/Theme.Study.NoActionBar"
             android:name=".ui.MotionTestActivity"
-            android:label="卡顿分析" />
+            android:label="卡顿分析"
+            android:theme="@style/Theme.Study.NoActionBar" />
+        <activity
+            android:name=".mvi.MVIActivity"
+            android:label="MVI"
+            android:theme="@style/Theme.Study.NoActionBar" />
         <activity
             android:name=".ui.TestFpsActivity"
             android:label="FPS" />
-        <activity android:name=".ui.base.UriProxyActivity" android:exported="true">
+        <activity
+            android:name=".ui.base.UriProxyActivity"
+            android:exported="true">
             <intent-filter>
                 <!-- 接收所有scheme为study的外部URI跳转，不区分host和path -->
-                <data android:scheme="study"/>
+                <data android:scheme="study" />
             </intent-filter>
         </activity>
     </application>
