启用R8更积极的优化，APK Size：10.8M  下载Size：5.9M

--- a/gradle.properties
+++ b/gradle.properties
@@ -29,3 +29,6 @@ minSdkVersion=23
 targetSdkVersion=30
 versionCode=1
 versionName=1.0
+
+#???????? R8 ????????????????????????????
+android.enableR8.fullMode=true
