--- a/gradle.properties
+++ b/gradle.properties
@@ -31,4 +31,4 @@ versionCode=1
 versionName=1.0
 
 #???????? R8 ????????????????????????????
-android.enableR8.fullMode=true
+#android.enableR8.fullMode=true
